@@ -1,5 +1,9 @@
 2008-12-03  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/file-ps.c: minor cleanup.
+
+2008-12-03  Sven Neumann  <sven@gimp.org>
+
 	* app/widgets/gimpactiongroup.[ch]: added an extra parameter for
 	the translation context to all gimp_action_group_add methods.
 
